--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,11 +4,11 @@ layout: default
 <article class="post">
 
   <header class="post-header">
-    <h1 class="post-title">{{ page.title | inspect  }}</h1>
+    <h1 class="post-title">{{ page.title }}</h1>
   </header>
 
   <div class="post-content">
     {{ content }}
   </div>
-
+{% include go-top.html %}
 </article>
