--- a/_includes/go-top.html
+++ b/_includes/go-top.html
@@ -1,8 +1,4 @@
-<!doctype html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<title>doc</title>
+<p>返回顶部</p>
 <style>
     .arrow{
         border: 9px solid transparent;
@@ -37,12 +33,6 @@
         display: none;
     }
 </style>
-</head>
-<body>
-
-
-
-
 <div id="article"></div>
 <div id="gotop">
 <div class="arrow"></div>
@@ -85,6 +75,3 @@ $(function(){
 });
 </script>
 <a href="#article" target="_self">返回顶部</a>
-</body>
-</html>
-。
