--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -10,5 +10,5 @@ layout: default
   <div class="post-content">
     {{ content }}
   </div>
-{% include go-top.html %}
+{% include test.html %}
 </article>
