--- a/_includes/go-top.html
+++ b/_includes/go-top.html
@@ -1,4 +1,3 @@
-<p>返回顶部</p>
 <style>
     .arrow{
         border: 9px solid transparent;
@@ -33,20 +32,20 @@
         display: none;
     }
 </style>
-<div id="article"></div>
+<!-- <div id="article"></div> -->
 <div id="gotop">
 <div class="arrow"></div>
 <div class="stick"></div>
 </div>
 <script src="http://cdn.staticfile.org/jquery/1.11.1-rc2/jquery.min.js"></script>
-<script>
+<!-- <script>
 $(function(){
     for(var i =0 ;i <100;i++){
         $("#article").append("<p>xxxxxxxxxx<br></p>")
     }
 
 })
-</script>
+</script> -->
 <script>
 $(function(){
 
@@ -74,4 +73,3 @@ $(function(){
 
 });
 </script>
-<a href="#article" target="_self">返回顶部</a>
