--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -1,9 +1,13 @@
 ---
 layout: page
 ---
-
-{% for post in site.categories[page.category] %}
-    <a href="{{ post.url | absolute_url }}">
-      {{ post.title }}
-    </a>
-{% endfor %}
+<ul class="post-list">
+    {% for post in site.categories[page.category] %}
+      <li>
+        <span class="post-meta">{{ post.date | date: "%Y-%m-%d" }}</span>
+        <h2>
+          <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
+        </h2>
+      </li>
+    {% endfor %}
+</ul>
